...
        }}
      />
      <Tab.Screen 
        name="Profile" 
        component={ProfileScreen}
        options={{
          tabBarTestID: 'profile-tab',
        }}
      />
    </Tab.Navigator>
  );
};

...
